Adjusted padding, prevented homepage overflow; Dog pause

--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,7 @@ tr:nth-child(even) {
 .homepagelinks {
   float: left;
   margin-top: 50px;
+  margin-left: 10px;
 }
 
 .boxcontainer {
